Fix nav alignment

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -40,7 +40,7 @@ header {
         text-align: center;
 
         &:first-of-type {
-            @media (min-width: 768px) {
+            @media (min-width: 768px) and (max-width: 1199px) {
                 text-align: left;
             }
         }
